[package]
name = "lockbench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
figment = { version = "0.10.18", features = ["toml"] }
histogram = { version = "0.10.0", features = ["serde"] }
humantime = "2.1.0"
parking_lot = "0.12.2"
serde = { version = "1.0.200", features = ["derive"] }
serde_default_utils = "0.2.2"
serde_json = "1.0.116"
serde_with = "3.8.1"
toml = "0.8.12"
